Issue #23796: peak and read1 methods of BufferedReader now raise ValueError if they called on a closed object.

Patch by John Hergenroeder.